Add sinampalukang manok recipe page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <ul>
         <li><a href="recipes/pork_adobo.html">Pork Adobo</a></li>
         <li><a href="recipes/chix_adobo.html">Chicken Adobo</a></li>
-        <l1><a>Sinampalukang Manok</a></l1>
+        <l1><a href="recipes/sinampalukan.html"><i>Sinampalukang Manok</i> (Chicken Stewed in tamarind)</a></l1>
     </ul>
     
 </body>
