--- a/recipes/chix_adobo.html
+++ b/recipes/chix_adobo.html
@@ -8,7 +8,7 @@
 <body>
     <h2><a href="../index.html">Home</a></h2>
     <h1>Chicken Adobo</h1>
-    <img src="../images/chix_adobo.jfif">
+    <img src="../images/chix_adobo.jfif" alt="Chicken Adobo picture">
 
     <h2>Description</h2>
     <p>Chicken Adobo is a Filipino dish known for its tender chicken simmered in a savory and tangy 
