--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes
-
-    </title>
+    <title>Odin Recipes</title>
+    <link rel="stylesheet" href="./main-page-style.css"/>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 id="title">Odin Recipes</h1>
 
     <ul>
         <li><a href="recipes/pork_adobo.html">Pork Adobo</a></li>
