Add same div class and id to h2

--- a/recipes/chix_adobo.html
+++ b/recipes/chix_adobo.html
@@ -10,13 +10,16 @@
     <h1>Chicken Adobo</h1>
     <img src="../images/chix_adobo.jfif" alt="Chicken Adobo picture">
 
-    <h2>Description</h2>
+    <div class="description">
+    <h2 id="h2_description">Description</h2>
     <p>Chicken Adobo is a Filipino dish known for its tender chicken simmered in a savory and tangy 
         sauce made from soy sauce, vinegar, garlic, bay leaves, and peppercorns. It’s widely 
         considered a comfort food in the Philippines because of its rich flavor, easy preparation,
         and compatibility with rice.</p>
+      </div>  
 
-    <h2>Ingredients</h2>
+     <div class="ingredients"> 
+    <h2 id="h2_ingredients">Ingredients</h2>
     <ul>
         <li>1 kg chicken (leg quarters, drumsticks, or thighs), cut into serving pieces</li>
         <li>1/2 soy sauce</li>
@@ -28,8 +31,10 @@
         <li>1 tbsp sugar(optiona, for slight sweetness)</li>
         <li>1-2 tbsp cooking oil</li>
     </ul>
+    </div>
 
-    <h2>Steps</h2>
+    <div class="steps">
+    <h2 id="h2_steps">Steps</h2>
     <ol>
         <li><strong>Marinate Chicken</strong><br>
         Combine chicken, soy sauce, and half of the garlic in a bowl.
@@ -56,5 +61,6 @@
             Serve hot with steamed rice.
         </li>
     </ol>
+    </div>
 </body>
 </html>
