--- a/recipes/sinampalukan.html
+++ b/recipes/sinampalukan.html
@@ -6,17 +6,21 @@
     <title>Sinampalukang Manok | Odin Recipes</title>
 </head>
 <body>
-    <h2><a href="../index.html">Home</a></h2>
-    <h1>Sinampalukang Manok</h1>
+    <h2 id="home"><a href="../index.html">Home</a></h2>
+    <h1 id="title">Sinampalukang Manok</h1>
     <img src="../images/sinampalukan.jfif" alt="Sinampalukang Manok in a bowl">
 
-    <h2>Description</h2>
+    <div class="description">
+    <h2 id="h2_description">Description</h2>
     <p>Sinampalukang Manok is a Filipino sour soup made with chicken, young tamarind leaves, 
         and tamarind broth. It’s similar to sinigang but usually uses sautéed ginger and garlic 
         to build a deeper flavor base. The dish is comforting, tangy, and commonly served with 
         steamed rice.</p>
 
-    <h2>Ingredients</h2>
+    </div>
+
+    <div class="ingredients">
+    <h2 id="h2_ingredients">Ingredients</h2>
     <ul>
         <li>1 kg chicken(preferably bone-in pieces)</li>
         <li>1 onion, chopped</li>
@@ -29,8 +33,10 @@
         <li>sault and fish sauce</li>
         <li>cooking oil</li>
     </ul>
+    </div>
 
-    <h2>Steps</h2>
+    <div class="steps">
+    <h2 id="h2_steps">Steps</h2>
     <ol>
         <li><strong>Saute Acromatics:</strong><br>
         In a pot, heat a bit of oil. Sauté garlic, onion, and ginger until fragrant and
@@ -57,6 +63,8 @@
         </li>
 
     </ol>
+
+    </div>
     
 </body>
 </html>
