--- a/recipes/pork_adobo.html
+++ b/recipes/pork_adobo.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pork Adobo | Odin Recipes</title>
+    <link rel="stylesheet" href="./recipe-styles.css"/>
 </head>
 <body>
     <h2 id="home"><a href="../index.html">Home</a></h2>
@@ -71,6 +72,6 @@
     </ol>
 
     </div>
-    
+
 </body>
 </html>
