--- a/recipes/chix_adobo.html
+++ b/recipes/chix_adobo.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="./recipe-styles.css"/>
 </head>
 <body>
-    <h2><a href="../index.html">Home</a></h2>
-    <h1>Chicken Adobo</h1>
-    <img src="../images/chix_adobo.jfif" alt="Chicken Adobo picture">
-
+    <h2 id="home"><a href="../index.html">Home</a></h2>
+    <hr/>
+    <h1 id="title">Chicken Adobo</h1>
+    
     <div class="description">
     <h2 id="h2_description">Description</h2>
     <p>Chicken Adobo is a Filipino dish known for its tender chicken simmered in a savory and tangy 
@@ -19,8 +19,11 @@
         and compatibility with rice.</p>
       </div>  
 
+      <br>
      <div class="ingredients"> 
     <h2 id="h2_ingredients">Ingredients</h2>
+    <img src="../images/chix_adobo.jfif" alt="Chicken Adobo picture">
+
     <ul>
         <li>1 kg chicken (leg quarters, drumsticks, or thighs), cut into serving pieces</li>
         <li>1/2 soy sauce</li>
@@ -34,6 +37,7 @@
     </ul>
     </div>
 
+    <br>
     <div class="steps">
     <h2 id="h2_steps">Steps</h2>
     <ol>
