--- a/recipes/sinampalukan.html
+++ b/recipes/sinampalukan.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sinampalukang Manok | Odin Recipes</title>
-    <link rel="stylesheet" href="./recipe-styles.css"
+    <link rel="stylesheet" href="./recipe-styles.css">
 </head>
 <body>
-    <h2 id="home"><a href="../index.html">Home</a></h2>
+    <h2  id="home"><a href="../index.html">Home</a></h2>
+    <hr>
     <h1 id="title">Sinampalukang Manok</h1>
-    <img src="../images/sinampalukan.jfif" alt="Sinampalukang Manok in a bowl">
-
+    
     <div class="description">
-    <h2 id="h2_description">Description</h2>
+    <h2 clas="h2s" id="h2_description">Description</h2>
     <p>Sinampalukang Manok is a Filipino sour soup made with chicken, young tamarind leaves, 
         and tamarind broth. It’s similar to sinigang but usually uses sautéed ginger and garlic 
         to build a deeper flavor base. The dish is comforting, tangy, and commonly served with 
@@ -20,8 +20,12 @@
 
     </div>
 
+    <br>
     <div class="ingredients">
-    <h2 id="h2_ingredients">Ingredients</h2>
+
+    <h2 class="h2s" id="h2_ingredients">Ingredients</h2>
+    <img src="../images/sinampalukan.jfif" alt="Sinampalukang Manok in a bowl">
+
     <ul>
         <li>1 kg chicken(preferably bone-in pieces)</li>
         <li>1 onion, chopped</li>
@@ -36,6 +40,7 @@
     </ul>
     </div>
 
+    <br>
     <div class="steps">
     <h2 id="h2_steps">Steps</h2>
     <ol>
